--- a/app/src/main/res/drawable/mid_layout_selector.xml
+++ b/app/src/main/res/drawable/mid_layout_selector.xml
@@ -11,7 +11,7 @@
             <stroke
                 android:width="1dp"
                 android:color="@color/app_white" />
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/app_white"/>
         </shape>
     </item>
 </selector>
