--- a/app/src/main/res/layout/class_detail_cardview.xml
+++ b/app/src/main/res/layout/class_detail_cardview.xml
@@ -30,6 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
+                android:textColor="#000000"
                 android:layout_marginTop="5dp"
                 android:layout_marginLeft="5dp"/>
 
