--- a/app/src/main/res/layout/fragement_preson.xml
+++ b/app/src/main/res/layout/fragement_preson.xml
@@ -1,9 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:stv="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:stv="http://schemas.android.com/apk/res-auto"
     android:background="@color/app_white"
     android:orientation="vertical"
     tools:context=".fragment.PersonFragment">
@@ -18,127 +18,102 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:textSize="20dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="70px"
+            android:layout_marginTop="30px"
             android:text="个人信息与设置"
             android:textColor="@color/app_white"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30px"
-            android:layout_marginLeft="70px"
+            android:textSize="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="15dp"
+            android:src="@drawable/setting" />
 
     </RelativeLayout>
 
     <LinearLayout
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/app_white"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/images_head"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:scaleType="fitCenter"
-            app:srcCompat="@mipmap/ic_launcher"
-            />
+            android:src="@drawable/table" />
 
         <LinearLayout
             android:id="@+id/afterLogin"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="10dp"
             android:layout_weight="1"
             android:orientation="vertical"
             android:weightSum="1">
 
-            <LinearLayout
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:layout_weight="0.3"
-                android:orientation="horizontal">
+                android:layout_marginTop="10dp"
+                android:text="陈金涛"
+                android:textColor="@color/app_black"
+                android:textSize="20dp" />
 
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="70dp"
-                    android:layout_height="wrap_content"
-                    android:text="昵称："
-                    android:textSize="18sp"/>
-
-                <TextView
-                    android:id="@+id/t_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="张叁叁"
-                    android:textSize="18sp"
-                    android:textStyle="bold"/>
-            </LinearLayout>
-
-            <LinearLayout
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.3"
-                android:orientation="horizontal">
+                android:layout_marginTop="10dp"
+                android:text="1800100606"
+                android:textColor="@color/app_black"
+                android:textSize="20dp" />
 
-                <TextView
-                    android:id="@+id/textView9"
-                    android:layout_width="70dp"
-                    android:layout_height="wrap_content"
-                    android:text="学号："
-                    android:textSize="18sp"/>
-
-                <TextView
-                    android:id="@+id/t_number"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.44"
-                    android:text="1800100000"
-                    android:textSize="18sp"
-                    android:textStyle="bold"/>
-            </LinearLayout>
 
         </LinearLayout>
 
-            <com.xuexiang.xui.widget.button.roundbutton.RoundButton
-                android:id="@+id/before_login"
-                app:rb_backgroundColor="@color/colorPrimary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="点击登录"
-                android:textSize="30dp"
-                android:layout_margin="5dp"
-
-                />
+        <com.xuexiang.xui.widget.button.roundbutton.RoundButton
+            android:id="@+id/before_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:text="点击登录"
+            android:textSize="30dp"
+            app:rb_backgroundColor="@color/colorPrimary" />
 
     </LinearLayout>
 
     <View style="@style/horizontal_line_style" />
-        <com.allen.library.SuperTextView
-            android:id="@+id/tv_information"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            stv:sLeftTextString="个人信息"
-            stv:sLeftTextSize="15sp"
-            stv:sLeftTextColor="#000000"
-            stv:sLeftIconRes="@android:drawable/ic_menu_myplaces"
-            stv:sRightIconRes="@drawable/ic_right_next" />
+
+    <com.allen.library.SuperTextView
+        android:id="@+id/tv_information"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        stv:sLeftIconRes="@android:drawable/ic_menu_myplaces"
+        stv:sLeftTextColor="#000000"
+        stv:sLeftTextSize="15sp"
+        stv:sLeftTextString="个人信息"
+        stv:sRightIconRes="@drawable/ic_right_next" />
 
 
     <com.allen.library.SuperTextView
         android:id="@+id/tv_password_edit"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        stv:sLeftTextString="设置密码"
-        stv:sLeftTextSize="15sp"
-        stv:sLeftTextColor="#000000"
         stv:sLeftIconRes="@android:drawable/ic_lock_idle_lock"
+        stv:sLeftTextColor="#000000"
+        stv:sLeftTextSize="15sp"
+        stv:sLeftTextString="设置密码"
         stv:sRightIconRes="@drawable/ic_right_next" />
 
 
@@ -146,10 +121,10 @@
         android:id="@+id/tv_info_help"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        stv:sLeftTextString="关于与帮助"
-        stv:sLeftTextSize="15sp"
-        stv:sLeftTextColor="#000000"
         stv:sLeftIconRes="@android:drawable/ic_menu_agenda"
+        stv:sLeftTextColor="#000000"
+        stv:sLeftTextSize="15sp"
+        stv:sLeftTextString="关于与帮助"
         stv:sRightIconRes="@drawable/ic_right_next" />
 
 
@@ -157,65 +132,58 @@
         android:id="@+id/tv_share"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        stv:sLeftTextString="分享"
-        stv:sLeftTextSize="15sp"
-        stv:sLeftTextColor="#000000"
         stv:sLeftIconRes="@android:drawable/ic_menu_share"
+        stv:sLeftTextColor="#000000"
+        stv:sLeftTextSize="15sp"
+        stv:sLeftTextString="分享"
         stv:sRightIconRes="@drawable/ic_right_next" />
 
-    <com.allen.library.SuperTextView
-        android:id="@+id/tv_setting"
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        stv:sLeftTextString="设置"
-        stv:sLeftTextSize="15sp"
-        stv:sLeftTextColor="#000000"
-        stv:sLeftIconRes="@android:drawable/ic_menu_manage"
-        stv:sRightIconRes="@drawable/ic_right_next" />
+        android:background="@color/app_white"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:background="@color/white">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="版本号:"
-                    android:textColor="#000000"
-                    android:textSize="15sp"/>
-                <TextView
-                    android:id="@+id/tv_profile_version"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="V1.0.0"
-                    android:textColor="#000000"
-                    android:textSize="15sp"/>
-            </LinearLayout>
-        </RelativeLayout>
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="版本号:"
+                android:textColor="#000000"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/tv_profile_version"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="V1.0.0"
+                android:textColor="#000000"
+                android:textSize="15sp" />
+        </LinearLayout>
+    </RelativeLayout>
 
 
     <com.xuexiang.xui.widget.button.roundbutton.RoundButton
         android:id="@+id/btn_quit"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_height="40dp"
         android:layout_below="@+id/login_btn_login"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
         android:layout_marginTop="10dp"
-        app:rb_backgroundColor="@color/app_red"
+        android:layout_marginRight="15dp"
         android:text="退出登录"
         android:textColor="@android:color/white"
-        android:textSize="23dp"/>
+        android:textSize="23dp"
+        app:rb_backgroundColor="@color/app_red" />
 
 
 </LinearLayout>
