--- a/app/src/main/res/layout/fragment_base_func.xml
+++ b/app/src/main/res/layout/fragment_base_func.xml
@@ -15,8 +15,7 @@
     <com.zhuangfei.timetable.TimetableView
         android:id="@+id/id_timetableView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/app_white">
+        android:layout_height="match_parent">
     </com.zhuangfei.timetable.TimetableView>
 
 </LinearLayout>
