UI:修改个人信息页部分UI(add)

--- a/app/src/main/res/layout/fragement_preson.xml
+++ b/app/src/main/res/layout/fragement_preson.xml
@@ -67,6 +67,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:scaleType="fitCenter"
+                    app:tint="@color/colorPrimary"
                     android:src="@drawable/table" />
 
                 <LinearLayout
